fixed seeding for Json
Need to see if it can be handled more efficiently, perhaps async..
it is taking a very long time to seed over 4600 records

--- a/src/MvcMovie/appsettings.json
+++ b/src/MvcMovie/appsettings.json
@@ -1,11 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-29sql;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MvcMovieContext": "Server=localhost\\SQLEXPRESS;Database=MvcMovieContext-66sql;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
 }
