--- a/src/MvcMovie/MvcMovie.csproj
+++ b/src/MvcMovie/MvcMovie.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="5.14.0" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="log4net" Version="2.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="3.1.9" />
